--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <a href="#" class="btn btn-primary" disabled>It's live!</a>
+        <a href="http://evitorg.herokuapp.com" class="btn btn-primary" >It's live!</a>
       </div>
     </div>
   </div>
