updated for magrathea

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 		<img src="./static/images/evit_tables.png" alt="EvitOrg tables page">
 		<p>The database is SQlite3, and there is extensive jQuery that was coded by me to make the transitions from page to page look more interesting. In the future, we would like to add custom event-page styling and push notifications when a new event is created by a friend or a task is assigned to you.</p>
 		<img src="./static/images/evit_event.png" alt="EvitOrg event page">   
+		<p>Image upload is not supported on heroku, as the remote database will not allow images to be uploaded to conserve space.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -183,10 +184,11 @@
         <img src="./static/images/magrathea_planet.png" alt="Magrathea planet page">
         <p>This app was built in LAMP stack, using CodeIgniter for its MVC framework. We built the entire app in a weeks time, and only spent a couple of hours on it recently to clear up some bugs.</p>
         <img src="./static/images/magrathea_cart.png" alt="Magrathea cart page">
+		<p>Image upload is not supported on heroku, as the remote database will not allow images to be uploaded to conserve space.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <a href="#" class="btn btn-primary" disabled>It's live!</a>
+        <a href="http://magrathea-app.herokuapp.com" class="btn btn-primary">It's live!</a>
       </div>
     </div>
   </div>
@@ -195,7 +197,7 @@
 
 <!--END MODALS-->
 <div class="footer">
-	<h4>ConeDeathAPS - Updated 11/7/2015 at 2:43pm PST</h4>
+	<h4>ConeDeathAPS - Updated 11/9/2015 at 5:04 PST</h4>
 	<img src="">
 </div>
 
