added guest logins

--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
         <p>Right now, the only thing that doesn't work is the audio stream transfer. Connections are being negotiated, but the final step of the connection which involves the audio streams being passed is not functioning. I have the local audio stream being routed back into the users own audio-out, so make sure you have headphones on or you block microphone access when you load the page!</p>
         <img src="./static/images/voicechat_admin.png" alt="VoiceChat admin page">
         <p>(I actually have a couple of friends that have accounts with this website, their personal information is redacted)</p>
-        <p>Please allow a few seconds for the app to wake up if you choose to visit it!</p>
+		<p><b>Feel free to login as a guest!</b></p>
+		<ul>
+			<li>Email: guest@demo.com</li>
+			<li>Password: password</li>
+		</ul>        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -162,6 +166,11 @@
 		<p>The database is SQlite3, and there is extensive jQuery that was coded by me to make the transitions from page to page look more interesting. In the future, we would like to add custom event-page styling and push notifications when a new event is created by a friend or a task is assigned to you.</p>
 		<img src="./static/images/evit_event.png" alt="EvitOrg event page">   
 		<p>Image upload is not supported on heroku, as the remote database will not allow images to be uploaded to conserve space.</p>
+		<p><b>Feel free to login as a guest!</b></p>
+		<ul>
+			<li>Email: demo@testing.com</li>
+			<li>Password: password</li>
+		</ul>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
