updated background with animation

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			}
 		}, 200);
 	}
+
 	var typed = false;
 	var ending = '</andrew>';
 	$(document).ready(function() {
@@ -84,7 +85,7 @@
 				<p class="inner_content">Check out some of my projects below! I will do whatever it takes to be designing the most popular websites out there in the future, will your website be one of those?</p>
 			</div>
 			<div class="content">
-				<h3>Projects!</h3>
+				<h3>Projects...</h3>
 				<div class="inner_content">
 					<ul id="projects">
 						<li><button data-toggle="modal" data-target="#F1Modal" class="btn btn-default">Formula1 DataBucket</button> <span class="glyphicon glyphicon-arrow-right"></span> <p>Uses the Ergast and Google Maps APIs, LAMP stack, and Materialize.</p></li>
