--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
         <img src="./static/images/F1DB_team.png" alt="F1_Ferrari">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <a href="http://f1-datahub.herokuapp.com" class="btn btn-primary">It's live!</a>
+        <a href="http://f1-datahub.herokuapp.com" class="btn btn-default btn-lg">Check it out!</a>
       </div>
     </div>
   </div>
@@ -146,8 +145,7 @@
 		</ul>        
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <a href="https://conedeathaps-voicechat.herokuapp.com" class="btn btn-primary">It's live!</a>
+        <a href="https://conedeathaps-voicechat.herokuapp.com" class="btn btn-default btn-lg">Check it out!</a>
       </div>
     </div>
   </div>
@@ -174,8 +172,7 @@
 		</ul>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <a href="http://evitorg.herokuapp.com" class="btn btn-primary" >It's live!</a>
+        <a href="http://evitorg.herokuapp.com" class="btn btn-default btn-lg" >Check it out!</a>
       </div>
     </div>
   </div>
@@ -197,8 +194,7 @@
 		<p>Image upload is not supported on heroku, as the remote database will not allow images to be uploaded to conserve space.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <a href="http://magrathea-app.herokuapp.com" class="btn btn-primary">It's live!</a>
+        <a href="http://magrathea-app.herokuapp.com" class="btn btn-default btn-lg">Check it out!</a>
       </div>
     </div>
   </div>
