Updated description for F1

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <p>This project was inspired by my passion for Formula 1. It uses get requests to the Ergast API to retrieve fastest laps for tracks and Driver/Team information. Please be patient as the API is very slow to respond at times :-P</p>
         <p>The only page reloading that happens is when you click on a nav button at the top. Everything else is done via AJAX.</p>
         <p>The graphs that are displayed on the driver and team pages are created by a custom graphing library that I built from scratch.</p>
+        <i>Updated 11/12/15 at 4:03pm --> AJAX requests are now more reliable, added indeterminate progress indicators while AJAX requests are coming through. All pages except Teams page are now responsive!</i>
         <img src="./static/images/F1DB_team.png" alt="F1_Ferrari">
       </div>
       <div class="modal-footer">
