--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="./static/bootstrap.min.js"></script>
 	<script type="text/javascript">
-
+	//global variables for use in multiple areas
+	var counter = 0;
+	var images;
+	//type one letter at a time, only if this has not been done yet
 	var typer = function(string, target) {
 		var i = 0;
 		setInterval(function() {
@@ -28,22 +31,80 @@
 			}
 		}, 200);
 	}
+	//preload the images and return them in an array
+	var loadImages = function() {
 
+		img1 = new Image();
+		img2 = new Image();
+		img3 = new Image();
+		img4 = new Image();
+
+		img1.src = "./static/images/F1DB_team.png";
+		img1.title = String("Uses the Ergast and Google Maps APIs, LAMP stack, and Materialize.<p><button data-toggle='modal' data-target='#F1Modal' class='btn btn-default'>More info</button></p>");
+		img2.src = "./static/images/voicechat_chat.png";
+		img2.title = String("Uses WebRTC for peer-to-peer audio streaming, MEAN stack. Also uses Socket.io for text chat.<p><button data-toggle='modal' data-target='#VCModal' class='btn btn-default'>More info</button></p>");
+		img3.src = "./static/images/evit_event.png";
+		img3.title = String("Event Organization app using Rails. Team project with <a href='http://www.linkedin.com/in/erikarudzis'>Erika Rudzis.</a><p><button data-toggle='modal' data-target='#EvitModal' class='btn btn-default'>More info</button></p>");
+		img4.src = "./static/images/magrathea_main.png";
+		img4.title = String("Our first project! eCommerce app using LAMP. Team project with <a href='http://www.linkedin.com/in/brandonwebdev'>Brandon Williams</a> and <a href='http://www.linkedin.com/in/erikarudzis'>Erika Rudzis.</a><p><button data-toggle='modal' data-target='#MagModal' class='btn btn-default'>More info</button></p>");
+
+		images = [img1, img2, img3, img4];
+		console.log("Loaded images", images);
+		return carouselInit(images);
+	}
+	//load the first image into the carousel
+	var carouselInit = function(images) {
+		$("#carousel").prepend(images[counter]).fadeIn('fast', function() { $(".carousel_move").fadeIn('fast');});
+		$("#caption").html(images[counter].title);
+
+	}
+	//traverse the carousel based upon whatever direction the user wants to go (based upon the id attribute of the icon they clicked on)
+	var carouselTraverse = function(direction) {
+		var index;
+		//go whichever direction was clicked
+		if (direction === "next") {
+			counter++;
+		} else if (direction === "prev") {
+			counter--;
+		} else {
+			console.log("Whoops!", direction);
+		}
+		//if the counter is less than 0, then we must begin using abs()
+		//using mod so that no matter how many times they click, index will always be between 0 and 3
+		if (counter < 0) {
+			index = Math.abs(counter)%images.length;
+		} else {
+			index = counter%images.length;
+		}	
+		//remove the current image and append the next (or previous) one
+		$("#carousel > img").remove();
+		$("#carousel").prepend(images[index]);
+		$("#caption").html(images[index].title);
+	}
+	//this is here so that we only type the message once
 	var typed = false;
 	var ending = '</andrew>';
+	//initial animation functions
 	$(document).ready(function() {
 		$("#name").animate({left: "0px"}, 750, "easeOutCubic", function() {});
 		$("#title").animate({left: "0px"}, 750, "easeOutCubic", function() {
 			$("#icons").animate({top: "0"}, 750, "easeOutBounce", function() {});
 			$("#divider").animate({width: "75%"}, 750, "easeOutElastic", function() {});
+		loadImages();
 		});
-	})
+	});
+	//when the user scrolls to the bottom, type the closing andrew tag
 	$(document).on("scroll", function() {
 		if (window.pageYOffset >= ($(document).height() - window.innerHeight)-10 && !typed) {
 			typed = true;
 			typer(ending, $(".last"));
 			return false;
 		}
+	});
+	//when the user clicks on a carousel icon, call the traversing function with whatever direction they clicked
+	$(document).on("click", ".carousel_move", function() {
+		var dir = $(this).attr("id");
+		carouselTraverse(dir);
 	})
 
 	</script>
@@ -67,8 +128,16 @@
 					<li class="icon">|</li>
 					<li class="icon"><a href="https://www.twitter.com/conedeathaps"><i class="fa fa-twitter"></i></a></li>
 				</ul>
-			<div id="divider">
-
+			<div id="divider"></div>
+			<div class="content">
+				<h3>Projects...</h3>
+				<div class="inner_content">
+					<i class="fa fa-chevron-circle-left carousel_move" id="prev" style="display:none;"></i>
+					<i class="fa fa-chevron-circle-right carousel_move" id="next" style="display:none;"></i>
+					<div id="carousel">
+						<p id="caption"></p>						
+					</div>
+				</div>
 			</div>
 			<div class="content">
 				<h3>Background...</h3>
@@ -83,17 +152,6 @@
 				<p class="inner_content">After I felt I had learned those skills, I desired more. However, I also needed a change of pace from selling cars. I took a position as a Leasing Consultant with Essex Property Trust, and remained there until the opportunity at Coding Dojo came up and I decided that I needed to follow my passion.</p>
 				<p class="inner_content">At Coding Dojo, my entire cohort and I learned a tremendous amount and gained over 1000hrs of experience in just 3 months! It taught us how to work under pressure with our timed full-stack exams, how to code cleanly, how to be resourceful and learn on our own. I graduated with a double black belt, meaning that I built a complete web app in LAMP, MEAN, and Rails. Each in under 4.5 hours!</p>
 				<p class="inner_content">Check out some of my projects below! I will do whatever it takes to be designing the most popular websites out there in the future, will your website be one of those?</p>
-			</div>
-			<div class="content">
-				<h3>Projects...</h3>
-				<div class="inner_content">
-					<ul id="projects">
-						<li><button data-toggle="modal" data-target="#F1Modal" class="btn btn-default">Formula1 DataBucket</button> <span class="glyphicon glyphicon-arrow-right"></span> <p>Uses the Ergast and Google Maps APIs, LAMP stack, and Materialize.</p></li>
-						<li><button data-toggle="modal" data-target="#VCModal" class="btn btn-default">Voice-Chat</button> <span class="glyphicon glyphicon-arrow-right"></span> <p>Uses WebRTC for peer-to-peer audio streaming, MEAN stack. Also uses Socket.io for text chat.</p></li>
-						<li><button data-toggle="modal" data-target="#EvitModal"  class="btn btn-default">EvitOrg</button> <span class="glyphicon glyphicon-arrow-right"></span> <p>Event Organization app using Rails. Team project with <a href="http://www.linkedin.com/in/erikarudzis">Erika Rudzis.</a></p></li>
-						<li><button data-toggle="modal" data-target="#MagModal" class="btn btn-default">Magrathea</button> <span class="glyphicon glyphicon-arrow-right"></span> <p>Our first project! eCommerce app using LAMP. Team project with <a href="http://www.linkedin.com/in/brandonwebdev">Brandon Williams</a> and <a href="http://www.linkedin.com/in/erikarudzis">Erika Rudzis.</a></p></li>
-					</ul>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -119,7 +177,8 @@
         <img src="./static/images/F1DB_team.png" alt="F1_Ferrari">
       </div>
       <div class="modal-footer">
-        <a href="http://f1-datahub.herokuapp.com" class="btn btn-default btn-lg">Check it out!</a>
+	    <a href="https://www.github.com/conedeathaps/F1-DataBucket"><i class="fa fa-github fa-4x"></i></a>
+        <a href="http://f1-datahub.herokuapp.com" class="btn btn-default btn-lg">Try it out!</a>
       </div>
     </div>
   </div>
@@ -146,7 +205,8 @@
 		</ul>        
       </div>
       <div class="modal-footer">
-        <a href="https://conedeathaps-voicechat.herokuapp.com" class="btn btn-default btn-lg">Check it out!</a>
+	    <a href="https://www.github.com/conedeathaps/Voice_Chat"><i class="fa fa-github fa-4x"></i></a>
+        <a href="https://conedeathaps-voicechat.herokuapp.com" class="btn btn-default btn-lg">Try it out!</a>
       </div>
     </div>
   </div>
@@ -173,7 +233,8 @@
 		</ul>
       </div>
       <div class="modal-footer">
-        <a href="http://evitorg.herokuapp.com" class="btn btn-default btn-lg" >Check it out!</a>
+	    <a href="https://www.github.com/erudz98/Evitorg"><i class="fa fa-github fa-4x"></i></a>
+        <a href="http://evitorg.herokuapp.com" class="btn btn-default btn-lg" >Try it out!</a>
       </div>
     </div>
   </div>
@@ -195,7 +256,8 @@
 		<p>Image upload is not supported on heroku, as the remote database will not allow images to be uploaded to conserve space.</p>
       </div>
       <div class="modal-footer">
-        <a href="http://magrathea-app.herokuapp.com" class="btn btn-default btn-lg">Check it out!</a>
+	    <a href="https://www.github.com/conedeathaps/Magrathea"><i class="fa fa-github fa-4x"></i></a>
+        <a href="http://magrathea-app.herokuapp.com" class="btn btn-default btn-lg">Try it out!</a>
       </div>
     </div>
   </div>
