--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
 <!--END MODALS-->
 <div class="footer">
-	<h4>ConeDeathAPS - Updated 11/9/2015 at 5:04 PST</h4>
+	<h4>ConeDeathAPS - Updated 11/16/2015 at 6:37pm PST</h4>
 	<img src="">
 </div>
 
