updated info for winslow

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 		target.appendChild(runnerElement);
 		console.log(elements);
 	}
+
 	var bubbleSort = function(data, speed) {
 		var swapped = true;
 		setInterval(function() {
@@ -376,7 +377,7 @@
       </div>
       <div class="modal-footer">
 	    <a href="https://www.github.com/conedeathaps/winslow"><i class="fa fa-github fa-4x"></i></a>
-        <a href="www.winslowsalon.com" class="btn btn-default btn-lg" disabled>Going live soon!</a>
+        <a href="www.winslowsalon.com" class="btn btn-default btn-lg">Check it out!</a>
       </div>
     </div>
   </div>
