updated algorithm speed, updated banner

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 		buildVis(data);
 	});
 	$(document).on("click", "#start", function() {
-		bubbleSort(data, 250);
+		bubbleSort(data, 100);
 	});
 //==============================START JQUERY EVENT LISTENERS========================//
 	</script>
@@ -223,7 +223,7 @@
 <body>
 <div class="nav">
 	<h1 id="name">Andrew-Sorensen</h1>
-	<h3 id="title">Front-End Developer</h3>
+	<h3 id="title">Front-End Developer / Coder</h3>
 </div>
 <div class="container-fluid">
 	<div class="row">
@@ -408,7 +408,7 @@
 
 <!--END MODALS-->
 <div class="footer">
-	<h4>ConeDeathAPS - Updated 11/16/2015 at 6:37pm PST</h4>
+	<h4>ConeDeathAPS - Updated 1/25/2016 at 8:12am PST</h4>
 	<img src="">
 </div>
 
