--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Andrew Sorensen</title>
 	<link rel="stylesheet" type="text/css" href="./static/index_style.css">
 	<link rel="stylesheet" type="text/css" href="./static/bootstrap.css">
-	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700|Raleway:400,700,100,200,300,500,600,800,900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,700|Inconsolata' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="./static/jquery.min.js"></script>
 	<script type="text/javascript" src="./static/jquery-ui.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -135,7 +135,7 @@
 </head>
 <body>
 <div class="nav">
-	<h1 id="name">Andrew-Sorensen</h1>
+	<h1 id="name">Andrew Sorensen</h1>
 	<h3 id="title">Front-End Developer / Coder</h3>
 </div>
 <div class="container-fluid">
@@ -335,7 +335,7 @@
 
 <!--END MODALS-->
 <div class="footer">
-	<h4>ConeDeathAPS - Updated 2/8/2016 at 1:46pm PST</h4>
+	<h4>ConeDeathAPS - Updated 2/13/2016 at 5:41pm PST</h4>
 </div>
 
 </body>
